--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@matt-tingen/react-scripts",
-  "version": "1.1.4-1",
+  "version": "1.1.4-2",
   "description": "Configuration and scripts for Create React App.",
   "repository": "matt-tingen/create-react-app",
   "license": "MIT",
@@ -62,7 +62,8 @@
   },
   "devDependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "styled-components": "^3.3.0"
   },
   "optionalDependencies": {
     "fsevents": "^1.1.3"
