--- a/packages/react-scripts/template/.vscode/settings.json
+++ b/packages/react-scripts/template/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true
+  },
   "eslint.options": {
     "configFile": "node_modules/eslint-config-react-app/index.js"
   }
